# blvm-sdk

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml  security.yml
crates/blvm-sdk-macros/: Cargo.toml
crates/blvm-sdk-macros/src/: cli_spec.rs  event_payload_map.rs  lib.rs  module_impl.rs  rpc_methods.rs
docs/: BINARY_SIGNING.md  api-reference.md  governance-crypto-library.md
examples/: governance_signing.rs  governance_verification.rs  multisig_workflow.rs
examples/demo-module/: main.rs
examples/hello-module/: README.md  main.rs  module.toml
src/: lib.rs
src/composition/: composer.rs  config.rs  conversion.rs  lifecycle.rs  registry.rs  types.rs  validation.rs
src/governance/: bip32.rs  bip39.rs  bip44.rs  nested_multisig.rs  psbt.rs
src/module/: bootstrap.rs  cli_args.rs  database.rs  manifest.rs  mod.rs  module_db.rs  prelude.rs  runner.rs  storage.rs  traits.rs
src/module/ipc/: client.rs  protocol.rs
src/module/security/: permissions.rs
src/module/wasm/: host.rs  instance.rs  loader.rs  mod.rs
tests/: composition_tests.rs  demo_module_cli_tests.rs  event_handlers_tests.rs  module_config_tests.rs
