[package]
name = "blvm-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Commons Contributors"]
description = "Bitcoin Commons software developer kit, governance infrastructure and composition framework for Bitcoin"
license = "MIT"
repository = "https://github.com/BTCDecoded/blvm-sdk"
homepage = "https://github.com/BTCDecoded/blvm-sdk"
documentation = "https://docs.rs/blvm-sdk"
keywords = ["bitcoin", "governance", "cryptography", "consensus"]
categories = ["cryptography", "development-tools"]

[dependencies]
# Governance cryptography (Bitcoin-compatible)
secp256k1 = { version = "=0.28.2", features = ["rand", "global-context"] }
bitcoin = "=0.31.2"  # For message signing standards
sha2 = "=0.10.9"  # SHA256 for checksums, SHA512 for seed derivation
hmac = "=0.12.1"
ripemd = "=0.1.3"
pbkdf2 = "=0.12.2"  # PBKDF2-SHA512 for BIP39 seed derivation

# Serialization
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.108"

# Error handling
anyhow = "=1.0.93"
thiserror = "=1.0.69"

# Encoding
hex = "=0.4.3"
base64 = "=0.21.5"

# Random number generation
rand = "=0.8.5"

# Date/time
chrono = { version = "=0.4.35", features = ["serde"] }

# CLI dependencies
blvm-sdk-macros = { path = "./crates/blvm-sdk-macros" }
clap = { version = "=4.4.11", features = ["derive"] }

# Composition framework dependencies
toml = "=0.8.2"
blvm-node = { path = "../blvm-node", optional = true }
tokio = { version = "=1.48.0", features = ["rt", "macros", "sync", "fs"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"], optional = true }
git2 = { version = "0.18", optional = true }
wasmtime = { version = "22", optional = true, default-features = false, features = ["wat", "cranelift", "runtime"] }

[features]
default = ["node"]
registry = ["dep:reqwest"]
git = ["dep:git2"]
node = ["dep:blvm-node"]
wasm-modules = ["dep:wasmtime", "node", "blvm-node/wasm-modules"]

# Local development: Use [patch.crates-io] to override with local paths
# For production/CI, these patches are removed and crates.io versions are used
[patch.crates-io]
blvm-protocol = { path = "../blvm-protocol" }
blvm-consensus = { path = "../blvm-consensus" }

[dev-dependencies]
# Testing
criterion = "=0.5.1"  # Benchmarking
tempfile = "=3.8.1"  # Temporary files for tests

[[example]]
name = "hello-module"
path = "examples/hello-module/main.rs"

[[example]]
name = "demo-module"
path = "examples/demo-module/main.rs"

[[bin]]
name = "blvm-keygen"
path = "src/bin/blvm-keygen.rs"

[[bin]]
name = "blvm-sign"
path = "src/bin/blvm-sign.rs"

[[bin]]
name = "blvm-verify"
path = "src/bin/blvm-verify.rs"

[[bin]]
name = "blvm-compose"
path = "src/bin/blvm-compose.rs"

[[bin]]
name = "blvm-sign-binary"
path = "src/bin/blvm-sign-binary.rs"

[[bin]]
name = "blvm-verify-binary"
path = "src/bin/blvm-verify-binary.rs"

[[bin]]
name = "blvm-aggregate-signatures"
path = "src/bin/blvm-aggregate-signatures.rs"

[[bin]]
name = "blvm-registry"
path = "src/bin/blvm-registry.rs"
